prevent filters from break lines + row wrap

--- a/src/app/workflow/workflow.component.scss
+++ b/src/app/workflow/workflow.component.scss
@@ -34,6 +34,7 @@
             border: 1px solid $light-grey-color;
             border-radius: 40px;
             line-height: 16px;
+            white-space: nowrap;
             &__name {
                 font-weight: 700;
                 color: #384853;
@@ -58,6 +59,7 @@
                 border: 1px solid $light-grey-color;
                 border-radius: 40px;
                 line-height: 16px;
+                white-space: nowrap;
                 .mat-menu-trigger {
                     position: absolute;
                     right: 0;
